Add check for q3, fix names issue

--- a/.gitignore
+++ b/.gitignore
@@ -227,4 +227,4 @@ pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,macos
 
-00-000-000*
+llm_assignment_3_submission-*
